--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,8 +8,8 @@
 	<string name="mode_normal">Normall</string>
 	<string name="mode_incomm">In comm</string>
 	
-	<string name="play">Play</string>
-	<string name="stop">Stop</string>
+	<string name="play">►</string>
+    <string name="stop">◼</string>
 	
 	<string name="route_earpiece">Earpiece</string>
 	<string name="route_speaker">Speaker</string>
@@ -19,9 +19,10 @@
 	<string name="route_stop_bt">Stop BT</string>
 	<string name="route_sco_off">BT SCO off</string>
 	
-	<string name="stream_default">Defaut</string>
-	<string name="stream_music">Music</string>
+	<string name="stream_default">Defaut (Music)</string>
+	<string name="stream_notification">Notification</string>
 	<string name="stream_voice">Voice call</string>
+	<string name="stream_ring">Ring</string>
 	
 	<string name="use_16k">Use 16k</string>
 	
