--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,9 @@
     <string name="action_settings">Settings</string>
 
 	<string name="mode_incall">In call</string>
-	<string name="mode_normal">Normall</string>
+	<string name="mode_normal">Normal</string>
 	<string name="mode_incomm">In comm</string>
+    <string name="mode_ring">Ring</string>
 	
 	<string name="play">Play</string>
 	<string name="stop">Stop</string>
@@ -21,10 +22,13 @@
     <string name="audio_focus_lose">AudioFocus lose</string>
     <string name="audio_focus_gain">AudioFocus gain</string>
 	
-	<string name="stream_default">Defaut</string>
+	<string name="stream_default">Default</string>
 	<string name="stream_music">Music</string>
 	<string name="stream_voice">Voice call</string>
+    <string name="stream_ring">Ringtone</string>
 	
 	<string name="use_16k">Use 16k</string>
-	
+    <string name="title_audiomanager_route">AudioManager route:</string>
+    <string name="title_audiomanager_mode">AudioManager mode:</string>
+
 </resources>
