--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
 	<string name="mode_incomm">In comm</string>
     <string name="mode_ring">Ring</string>
 	
-	<string name="play">▶</string>
+	<string name="play">▶️</string>
     <string name="pause">⏸</string>
 	<string name="stop">⏹️</string>
 	
